force-app/main/default/objects/Bill__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Deliver__c</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>