force-app/main/default/objects/Bill__c/fields/FormulaTest__c.field-meta.xml
<CustomField>
    <fullName>FormulaTest__c</fullName>
    <formula>Order__r.Customer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaTest</label>
    <type>Text</type>
</CustomField>